# TASK-109

./: metadata.json
repo/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.backup  Dockerfile.cargotest  Dockerfile.tester  README.md  db_cleanup.sh  docker-compose.override.yml  docker-compose.yml  run_tests.sh  scratch_test.py  tarpaulin.toml  test.db  tests_common.sh
repo/API_tests/: test_01_auth_lifecycle.sh  test_02_health_profile.sh  test_03_metrics.sh  test_04_goals.sh  test_05_audit_logs.sh  test_06_persistence.sh  test_07_hmac_signing.sh  test_08_rate_limiting.sh  test_09_key_rotation.sh  test_10_backup_restore.sh  test_11_workflows.sh  test_12_notifications.sh  test_13_security_matrix.sh  test_14_export_download.sh
repo/docs/: SECURITY_EVIDENCE.md  audit_event_catalog.md
repo/docs/sample_artifacts/: audit_log_sample.json  (+4 more)
repo/frontend/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.node.json  vite.config.ts
repo/scratch/: debug_goal.py  debug_goal.sh
repo/scripts/: backup.sh  coverage.sh  crontab  entrypoint.sh  restore.sh  restore_drill.sh
repo/src/: config.rs  crypto.rs  db.rs  errors.rs  lib.rs  main.rs  metrics.rs  notifications.rs  schema.rs
repo/tests/: crypto_roundtrip.rs  error_responses.rs  health_endpoints.rs  middleware_unauthenticated.rs  permission_boundaries.rs  rate_limit_middleware.rs  security_headers.rs
repo/unit_tests/: test_01_health.sh  test_02_auth_success.sh  test_03_auth_failures.sh  test_04_rbac.sh  test_05_validation.sh
(+125 files in other folders)
