[package]
name = "vitalpath"
version = "0.1.0"
edition = "2021"

[dependencies]
# Logging for legacy log macros
log = "0.4"
actix-web = "4"
actix-rt = "2"
tokio = { version = "1", features = ["full"] }

# Diesel ORM + PostgreSQL
diesel = { version = "2.2", features = ["postgres", "uuid", "chrono", "r2d2", "serde_json"] }
diesel_migrations = "2.2"
r2d2 = "0.8"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Timestamps
chrono = { version = "0.4", features = ["serde"] }

# Password hashing
argon2 = "0.5"

# JWT
jsonwebtoken = "9"

# Config / env
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-actix-web = "0.7"

# Validation
validator = { version = "0.18", features = ["derive"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Random number generation (CAPTCHA challenges)
rand = "0.8"

# Field-level AES-256-GCM encryption
aes-gcm = "0.10"
base64 = "0.21"

# Metrics (in-process only)
prometheus = { version = "0.13", features = ["process"] }

# Analytics export
rust_xlsxwriter = "0.68"

# Security — rate limiting, HMAC signing
dashmap = "5"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
